--- a/Rezerve.Desktop/Properties/Resources.resx
+++ b/Rezerve.Desktop/Properties/Resources.resx
@@ -118,22 +118,28 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="bed-41042_640" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bed-41042_640.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bed-1300388_640" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bed-1300388_640.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="free-vector-bed_100687_Bed" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\free-vector-bed_100687_Bed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bell-1096280_640" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bell-1096280_640.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="crearlogogratis_1024x1024_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\crearlogogratis_1024x1024_01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="crearlogogratis_1024x1024_011" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\crearlogogratis_1024x1024_011.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="free-vector-bed_100687_Bed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\free-vector-bed_100687_Bed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bed-41042_640" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bed-41042_640.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="client-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\client-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bed-1300388_640" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bed-1300388_640.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bell-1096280_640" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bell-1096280_640.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
